2001-03-07  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>

	* components/services/summary/nautilus-summary-view.c:
	(update_header), (generate_eazel_news_entry_row): Update title
	from services page and remove date stamp and icon per marketing
	requirements (bug 7476).

2001-03-07  John Harper  <jsh@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Fixed bug 7472 (Nautilus behavior after leaving first run
	druid):

	* src/nautilus-first-time-druid.c (http_is_known_to_work): new
	global variable - only ever set true if we know for sure that
	http connections will work

	(finished_label, update_finished_label,
	nautilus_first_time_druid_show): since we only launch the
	services window when http requests are known to work, make the
	text in the `Finished' page be conditional on that

	(next_update_page_callback, download_callback): call update
	finished_label

	(download_callback): set http_is_known_to_work to true if the
	connection succeeded

2001-03-06  Ian McKellar  <ian@eazel.com>

	reviewed by: Maciej Stachowiak <mjs@eazel.com> 

	* components/services/install-view/nautilus-service-install-view.c:
	(nautilus_install_service_add_menu_launchers):
	Fix bug 7429 - don't try to print the menu path if one does not
	exist.

Wed Mar 07 00:35:04 2001  George Lebl <jirka@5z.com>

	Ramiro Estrugo <ramiro@eazel.com> said without this patch
	life as we know it will cease to exist.

	* libnautilus-extensions/nautilus-preferences-box.c
	  (category_list_select_row_callback):  When getting the
	  category name, get it out of the correct row.
	  Fixes #7482

2001-03-06  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: reviewed by: Darin Adler <darin@eazel.com>

	Workaround hack for the following bugs:

	7352 - Theme selector description labels missing in ja_JP locale.
	7354 - First time druid title doesnt properly display in the ja_JP
	locale.
	
	* libnautilus-extensions/nautilus-gdk-font-extensions.c: