@@ -1,3 +1,13 @@
+2001-03-07  John Harper  <jsh@eazel.com>
+
+	reviewed by: Pavel Cisler <pavel@eazel.com>
+
+	Fixed bug 7479 (Text for Intro Panel must be updated for 1.0):
+
+	* src/nautilus-first-time-druid.c
+	(nautilus_first_time_druid_show): updated the text on the first
+	page
+
 2001-03-07  Maciej Stachowiak  <mjs@eazel.com>
 
 	reviewed by: Darin Adler  <darin@eazel.com>
